<resources>
    <string name="app_name">Keep In Touch</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_messenger">Messenger</string>
    <string name="vk_messenger">ВКонтакте</string>
    <string name="telegram_messenger">Telegram</string>
    <string name="messages">Messages</string>
    <string name="action_search">Search</string>
    <string name="action_change_user">Change user</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_or_mobile_phone">Email or mobile phone</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="send_message">Send message</string>

    <integer name="com_vk_sdk_AppId">6488442</integer>
    <string name="com_vk_sdk_ApiVersion">5.38</string>
    <string name="internet_connection_error_message">Some problems with Internet connection. Check your internet connection and try to log in again.</string>
    <string name="internet_connection_error_title">Internet connection error</string>
    <string name="send">SEND</string>
    <string name="enter_message_hint">Enter message</string>

    <string name="facebook_app_id">398020550715063</string>
    <string name="fb_login_protocol_scheme">fb398020550715063</string>
    <string name="coming_soon">Coming soon</string>
    <string name="photo">Photo</string>
    <string name="music_video">Music/Video</string>
    <string name="webp">WebP</string>
    <string name="gif">GIF</string>
</resources>
