<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/jpeg_png_button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_weight="1"
        android:background="@drawable/oval_button_facebook"
        android:text="@string/photo"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/mp3_mp4_button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="205dp"
        android:layout_weight="1"
        android:background="@drawable/oval_button_facebook"
        android:text="@string/music_video"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/webp_button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:layout_weight="1"
        android:background="@drawable/oval_button_facebook"
        android:text="@string/webp"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/gif_button"
        android:layout_width="236dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="315dp"
        android:layout_weight="1"
        android:background="@drawable/oval_button_facebook"
        android:text="@string/gif"
        android:textColor="@android:color/background_light" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="375dp"
        android:text="Choose file"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp" />

    <include
        layout="@layout/messenger_button_send_blue_large"
        android:layout_width="218dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp" />
</RelativeLayout>